2005-02-16  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Add import button and feedback dialog.

2005-02-15  Florian Boor <florian.boor@kernelconcepts.de>

    * db.c (db_check_tags): Speedup and fix, only write data if necessary.
    * editing.c (create_edit): Removed unused and buggy tooltips code.
    * main.c (build_children): Add basic support for displaying images.
                               Some formating fixes.

2005-02-14  Florian Boor <florian.boor@kernelconcepts.de>

    * db.c (sort_entries): Sort by family name.
    * db.c (read_one_entry): Removed obsolete queries.
    * main.c: Minor cleanups.

2005-02-08  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Show contact details on doubleclick on the contact list
                  in portrait mode. 

2005-01-01  Luc Pionchon  <luc@handhelds.org>

	* configure.c (create_pageSetup): remove markup from i18n'ed strings

2005-01-01  Phil Blundell  <philb@gnu.org>

	* Version 0.34 released.

2005-01-01  Phil Blundell  <philb@gnu.org>

	Rewrite layout parser to use GMarkup rather than libxml2 DOM API:
	* structure.c (new_element): New.
	(xml_parser_start_element): Likewise.
	(xml_parser_end_element): Likewise.
	(xml_parser_text): Likewise.
	(free_ctx): Likewise.
	(read_structure): Reimplement using GMarkupParser and above
	functions.
	(structure_parse_xml_item): Deleted.
	(structure_parse_xml_group): Likewise.
	(structure_parse_xml_page): Likewise.
	(structure_parse_xml): Likewise.
	* Makefile (PACKAGE_CFLAGS): Remove libxml2 flags.
	(PACKAGE_LDFLAGS): Likewise.

2004-11-25  Florian Boor <florian.boor@kernelconcepts.de>

    * structure.c (load_well_known_tags): Make sure all tags are uppercase.
    * db.c: New functions (db_check_tags, check_one_tag) to make sure all
            tags are upercase.
    * finddlg.c, finddlg.h, db.c, db.h, main.c: Applied patch to speed up 
                                                search using SQL. Thanks