@@ -20,6 +20,7 @@
 #include <gpe/picturebutton.h>
 #include <gpe/pim-categories-ui.h>
 #include <gpe/spacing.h>
+#include <libdisplaymigration/displaymigration.h>
 
 #include "support.h"
 #include "structure.h"
@@ -409,6 +410,8 @@ create_edit (void)
       else
         gtk_window_set_default_size (GTK_WINDOW (edit), 240, 320);
     }
+  
+  displaymigration_mark_window (edit);
 
   return edit;
 }
